# grrt-star

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  README.md  benchmark_profile.nsys-rep  nsys-report-3945.nsys-rep  solution_problem.yaml.sol
analysis/: analysis.ipynb
configs/: c_10_gpu.yml  c_10_gpu.yml.sol  c_10_sparse.yml.sol  circle_10.yml  circle_10.yml.sol  circle_10_random.yml  circle_10_random.yml.sol  large_triangle_2.yml  large_triangle_2.yml.sol
configs/test/: solution_two_drone_no_conflict.txt  test_two_drone_no_conflict.yml
include/: constants.h  point.h  result.h  robot.h  state.h
include/config/: solver_config.h  solver_config_parser.h  solver_problem.h
include/graphs/: iroadmap.h  roadmap.h  roadmap_dart.h  roadmap_edge.h  roadmap_vertex.h  search_dart.h  search_graph.h  search_tree.h  search_vertex.h
include/pkgs/: cli11.hpp
include/robots/: robot.h  robot_factory.h  robot_types.h
include/robots/drone/: drone.h  drone.hpp  drone_gpu.h  drone_state.hpp
include/solver/: solver.h  solver_result.h
include/state/: robot_state.h  system_state.h  voxel_region.h
include/voxels/: voxel.h  voxel_manager.h  voxel_operation_manager.h  voxel_type.h
include/voxels/managers/: point_cloud_voxel.hpp
include/voxels/point_cloud/: point_cloud_voxel.hpp  point_cloud_voxel_gpu.h
include/voxels/point_cloud/test/: point_cloud_voxel_gpu copy 3.h
scripts/: default.rviz  dev.sh  dev_cpu.sh  generate_input.py  loc.sh  mpirun.sh  tmux_mpirun.sh  visualize.sh  visualize_circle_10.sh  visualize_circle_10_random.sh  visualize_simple_voxel.sh  windows_dev.sh
src/: grrt_benchmark.cpp  grrt_player.cpp  grrt_server.cpp  grrt_solver.cpp
src/config/: solver_config_parser.cpp
src/graphs/: roadmap.cpp  search_graph.cpp  search_tree.cpp
src/robots/: robot_factory.cpp  robot_types.cpp
src/solver/: solver.cpp
src/voxels/: point_cloud_voxel_gpu.cu
src/voxels/tests/: point_cloud_voxel_gpu copy 2.cu  point_cloud_voxel_gpu copy.cu
test/: test_basic_all_pairs_shortest_path.cpp  test_basic_drone_voxel_intersection.cpp  test_basic_expansion.cpp  test_configs.yml  test_fibonacci_sphere.py  test_gpu_drone_voxel_intersection.cpp  test_gpu_expansion.cpp  test_segment_line.py  test_solver_basic.cpp  test_voxels.cpp
